# LAT_beams

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  del_pointing.py  fit_point.slurm  fit_pointing.py  fit_pointing_tester.slurm  fit_source_map.py  fit_stacked_map.py  make_profile.py  make_source_map.py  make_stacked_map.py  mars.py  mkdocs.yaml  mpi_test.py  offs.py  pyproject.toml  solve_beam_map.py  stack_source_maps.py  summarize_beams.py  summarize_ffp.py  summarize_pointing.py
.github/workflows/: bumpversion.yaml
2.0.0/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
2.0.0/search/: search_index.json
configs/fit_pointing/: j1058.yaml  mars.yaml  mars_aligned_offset.yaml  mars_nersc.yaml  mars_nersc_tester.yaml  mars_test.yaml  mars_unfocused.yaml  neptune_nersc.yaml  nersc.yaml  rcw38.yaml  saturn_nersc.yaml  uranus_nersc.yaml
configs/make_source_map/: mars.yaml  mars_unfocused.yaml  nersc.yaml  nersc_aso_test.yaml  nersc_atm.yaml  nersc_atm_wide.yaml  site.yaml
contexts/: lv2_katie.yaml  nersc_pointing_model.yaml  nersc_pointing_model_atm.yaml  with_todpoint.yaml
det_lists/: inout0.txt  inout1.txt
fit_analysis/: ModuleShowcase.ipynb  Workspace.ipynb  fit_maps.ipynb  make_maps_mpi.py  map_fun.py  mapmeta.h5  maps_dict_example.json  models.py  plot_fun.py  prepare_maps.ipynb  procedure.md  search_features.ipynb  setup_mapmeta.py
fit_analysis/configs/: local.yaml
fit_analysis/fits/: coadd_fits.h5
lat_beams/: __init__.py  beam.py  beam_utils.py  fitting.py  lmfit.py  mapmaking.py  models.py  noise.py  plotting.py  pointing_model.py  utils.py
lat_beams/fitting/: map.py  models.py  profile.py  tod.py
preproc/: preproc.yaml  preproc_atm.yaml  preproc_fit_point.yaml
scratch/: cross_summary.py  del_pointing.py  summarize_beams.py  summarize_ffp.py
sims/: run.lat.sh  write_context.py
slurm/: fit_maps.slurm  fit_point.slurm  fit_point_nightly.sh  make_maps.slurm  slurm-48327761.out  slurm-49139724.out  slurm-49183835.out  slurm-49210181.out  slurm-49216797.out  slurm-49245552.out  solve_maps.slurm
(+19 files in other folders)
